# parallel101

./: README.md
000_cmake_test/: 000_cmake_test.cpp  CMakeLists.txt
001_cmakelists_test/: 001_cmakelists_test.cpp  001_cmakelists_test.h.in  CMakeLists.txt
